--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.22.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -31,6 +32,7 @@
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "pg": "^8.2.1",
+    "stripe": "^8.67.0",
     "winston": "^3.3.3",
     "xss": "^1.0.7"
   },
