--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-  "name": "unprinted-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "postgrator --config postgrator-config.js",
-    "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
-    "predeploy": "npm audit --audit-level=moderate",
-    "deploy": "git push heroku master"
-  },
-  "keywords": [],
-  "engines": {
-    "node": "12.18.0"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cloudinary": "^1.22.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^3.21.3",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
-    "morgan": "^1.9.1",
-    "path": "^0.12.7",
-    "pg": "^7.18.2",
-    "stripe": "^8.67.0",
-    "winston": "^3.3.3",
-    "xss": "^1.0.7"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
-    "nodemon": "^2.0.2",
-    "postgrator-cli": "^4.0.0",
-    "supertest": "^4.0.2"
-  }
+	"name": "unprinted-server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/server.js",
+		"test": "mocha --require test/setup.js",
+		"dev": "nodemon src/server.js",
+		"migrate": "postgrator --config postgrator-config.js",
+		"migrate:test": "env NODE_ENV=test npm run migrate",
+		"migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+		"predeploy": "npm audit --audit-level=moderate",
+		"deploy": "git push heroku master",
+		"create-db": "psql -U postgres < schema.sql",
+		"seed": "yarn create-db && Node src/main.js"
+	},
+	"keywords": [],
+	"engines": {
+		"node": "12.18.0"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
+		"cloudinary": "^1.22.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"helmet": "^3.21.3",
+		"jsonwebtoken": "^8.5.1",
+		"knex": "^0.21.1",
+		"morgan": "^1.9.1",
+		"path": "^0.12.7",
+		"pg": "^8.0.3",
+		"stripe": "^8.67.0",
+		"winston": "^3.3.3",
+		"xss": "^1.0.7"
+	},
+	"devDependencies": {
+		"chai": "^4.2.0",
+		"mocha": "^8.0.1",
+		"nodemon": "^2.0.2",
+		"postgrator-cli": "^4.0.0",
+		"supertest": "^4.0.2"
+	}
 }
